--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
 		</div>
 	</section>
 
-	<section id="cont" style="background-image:url(../Portfolio_copia/imgs/map.png);">
+	<section id="cont" style="background-image:url(../Portifolio/imgs/map.png);">
 		<div class="contato">
 			<div class="h5-contato text-center mb-4 title">Contato</div>
 			<div class="col-sm-6">
