--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sree+Krushnadevaraya" rel="stylesheet">	
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/fontawesome/4.7.0/css/fontawesome.min.css">
 
 
@@ -52,9 +52,9 @@
 			<div class="container">
 				<div class="button-container">
 					<div class="btn-custom" style="text-align: center;">
-						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/alyson.zancanaro" rel="tooltip" target="_blank" title="Follow me on Facebook" style=" padding: 15px 23px;"><i class="fa fa-facebook"></i></a>
-						<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+" style=" padding: 15px 16px;"> <i class="fa fa-google-plus"></i></a>
-						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/zancanaro_alyson/?hl=pt-br" rel="tooltip" target="_blank" title="Follow me on Instagram"  style=" padding: 15px 23px;"><i class="fa fa-instagram"></i></a>
+						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/alyson.zancanaro" rel="tooltip" target="_blank" title="Follow me on Facebook" style=" padding: 15px 25px;"><i class="fab fa-facebook-f"></i></a>
+						<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Linkedin" style=" padding: 15px 23px;"><i class="fab fa-linkedin"></i></a>
+						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/zancanaro_alyson/?hl=pt-br" rel="tooltip" target="_blank" title="Follow me on Instagram"  style=" padding: 15px 23px;"><i class="fab fa-instagram"></i></a>
 					</div>
 				</div>
 			</div>
