--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Sree+Krushnadevaraya" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css?family=Sree+Krushnadevaraya" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/fontawesome/4.7.0/css/fontawesome.min.css">
 
@@ -23,7 +23,7 @@
 	<title>Alyson Zancanaro Ramos</title>
 
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-success ">
-		<a class="navbar-brand" href="#" style="color: white;margin-left: 50px;">Portifolio</a>
+		<a class="navbar-brand" href="#" style="color: white;margin-left: 50px;">Portfólio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsite">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -41,9 +41,12 @@
 		<div class="row">
 			<div id="in">
 				<div class="imagem">
+					<div class="circle d-none d-sm-block;d-sm-none d-md-block">
+						<img src="imgs/ImagemPerfil.jpeg" class="d-none d-sm-block;d-sm-none d-md-block">
+						
+					</div>
 					<img src="imgs/cc-bg-1.jpg" class="img-fluid" alt="Responsive image">
-					<div class="text d-none d-md-block">Alyson Zancanaro Ramos</div>
-					
+					<div class="text d-none d-sm-block">Alyson Zancanaro Ramos</div>
 				</div>
 			</div>
 		</div>
@@ -53,8 +56,8 @@
 				<div class="button-container">
 					<div class="btn-custom" style="text-align: center;">
 						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/alyson.zancanaro" rel="tooltip" target="_blank" title="Follow me on Facebook" style=" padding: 15px 25px;"><i class="fab fa-facebook-f"></i></a>
-						<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Linkedin" style=" padding: 15px 23px;"><i class="fab fa-linkedin"></i></a>
-						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/zancanaro_alyson/?hl=pt-br" rel="tooltip" target="_blank" title="Follow me on Instagram"  style=" padding: 15px 23px;"><i class="fab fa-instagram"></i></a>
+						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/alyson-zancanaro-7a63b148/" rel="tooltip" target="_blank" title="Follow me on Linkedin" style=" padding: 15px 23px;"><i class="fab fa-linkedin"></i></a>
+						<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/zancanaro_alyson/?hl=pt-br" rel="tooltip" target="_blank" title="Follow me on Instagram" style=" padding: 15px 23px;"><i class="fab fa-instagram"></i></a>
 					</div>
 				</div>
 			</div>
@@ -130,7 +133,7 @@
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Java</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 65%;">65%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 65%;">50%</div>
 							</div>
 						</div>
 					</div>
@@ -146,7 +149,7 @@
 					<div class="col-md-6" style="height: 15px">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Wordpress</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">60%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">50%</div>
 							</div>
 						</div>
 					</div>
@@ -208,7 +211,7 @@ box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
 	<script src="nodemodules/jquery/dist/jquery.js"></script>
 	<script src="nodemodules/popper.js/dist/umd/popper.js"></script>
 	<script src="nodemodules/bootstrap/dist/js/bootstrap.js"></script>
-	
+
 
 
 
