--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Sree+Krushnadevaraya" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/fontawesome/4.7.0/css/fontawesome.min.css">
-
-
+	<link rel="icon"  type="imagem.png" href="imgs/icon.png">
 </head>
 
 <body>
@@ -40,12 +39,11 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div id="in">
-				<div class="imagem">
+				<div class="imagem ">
 					<div class="circle d-none d-sm-block;d-sm-none d-md-block">
 						<img src="imgs/ImagemPerfil.jpeg" class="d-none d-sm-block;d-sm-none d-md-block">
-						
 					</div>
-					<img src="imgs/cc-bg-1.jpg" class="img-fluid" alt="Responsive image">
+					<img src="imgs/cc-bg-1.jpg" class="img-fluid" alt="Responsive image" style="display: flex; min-height: 350px;">
 					<div class="text d-none d-sm-block">Alyson Zancanaro Ramos</div>
 				</div>
 			</div>
@@ -64,20 +62,21 @@
 		</div>
 
 	</div>
+	<!--SOBRE  -->
 	<div class="container">
 		<div id="sobre">
 			<div class="card" data-aos="fade-up" data-aos-offset="10">
 				<div class="row">
 					<div class="col-lg-6 col-md-12">
 						<div class="card-body">
-							<div class="h3 -font-weight-bold">Sobre</div>
+							<div class="h3 -font-weight-bold "style="font-family: 'Sree Krushnadevaraya', serif;font-size: 32px;">Sobre</div>
 							<p>Ola! Meu nome é Alyson Zancanaro Ramos. Estou cursando ensino superior em Analise e Desenvolvimento de Sistemas em Gravatai na Faculdade e Escola Tecnica QI.</p>
 							<p>Sou amante de tecnologia e inovaçoes, adoro programaçao web. Gosto de codificar porque é a carreira mais incrível do mundo, Ja dizia o grande Steve Jobs "Todos neste país deveriam aprender a programar um computador, pois isto ensina a pensar."</p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-12">
 						<div class="card-body">
-							<div class="h3 -font-weight-bold">Informaçoes Basicas</div>
+							<div class="h3 -font-weight-bold" style="font-family: 'Sree Krushnadevaraya', serif; font-size: 32px;">Informaçoes Basicas</div>
 							<div class="row">
 								<div class="col-sm-4"><strong class="text-uppercase">Idade:</strong></div>
 								<div class="col-sm-8">20</div>
@@ -101,10 +100,10 @@
 		</div>
 	</div>
 
-
+	<!--HABILIDADES  -->
 	<div class="container">
 		<div id="habilidades">
-			<div class="font-weight-bold" style="text-align: center; font-size: 29px;;">Habilidades</div>
+			<div class="font-weight-bold" style="text-align: center; font-size: 35px;font-family: 'Sree Krushnadevaraya', serif;padding-top:-60px;padding-bottom:15px;">Habilidades</div>
 			<div class="card-body">
 				<div class="row">
 					<div class="col-md-6">
@@ -158,14 +157,11 @@
 		</div>
 	</div>
 
-
+	<!--PROJETOS  -->
 	<section id="p">
-		<div class="container" style="	-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
--moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
-">
-			<div class="font-weight-bold" style="text-align: center; font-size: 29px; margin-bottom: 50px; text-align: center; padding-top: 25px;">Projetos</div>
-			<div class="videos">
+		<div class="container" style="	-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);-moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);">
+			<div class="font-weight-bold" style="text-align: center; font-size: 35px; margin-bottom: 50px; text-align: center; padding-top: 25px;font-family: 'Sree Krushnadevaraya', serif;">Projetos</div>
+			<div class="videos col-sm">
 				<div class="box">
 					<video controls style="max-height: 250px;">
 						<source src="videos/video01.mp4" type="video/mp4">
@@ -188,71 +184,67 @@ box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
 		</div>
 	</section>
 
-	<section id="cont" style="background-image:url(../Portifolio/imgs/map.png);">
-		<div class="contato">
-			<div class="h5-contato text-center mb-4 title">Contato</div>
-			<div class="col-sm-6">
-				<div class="card bg-success">
-					<div class="card-header" data-link="www.linkedin.com/in/alyson-zancanaro-7a63b148/"><i style="font-size:24px" class="fas fa-phone fa-lg">&nbsp;</i>Linkedin</div>
-					<div class="card-body" data-link="alyson.zancanaro@hotmail.com"><i style="font-size:24px" class="fa">&#xf0e0;&nbsp;</i>Email</div>
-					<div class="card-footer" data-link="(51)99792-1418"><i style="font-size:24px" class="fab fa-whatsapp">&nbsp;</i>Whatsapp</div>
+	<!--CONTATO  -->
+	<section id="cont">
+		<div class="container">
+			<div class="borda col-md-12 col-sm-12" >
+				<div class="c">
+					<div class="font-weight-bold" style="text-align: center; font-size: 35px;margin-top: 2%; padding-top:15px; margin-bottom: 15px;font-family: 'Sree Krushnadevaraya', serif;">Contato</div>
+					<form name="meu_formulario" method="post" action="#in">
+						<div class="row " style="padding-top: 1%;">
+							<div class="col-md-6 offset-md-3" style="padding: 5px; ">
+								<div class="input-group-prepend">
+									<img src="https://img.icons8.com/office/30/000000/administrator-male.png" style="padding:7px; margin-right: 5px;">
+									<input type="text" class="form-control" placeholder="First name">
+								</div>
+							</div>
+							<div class="col-md-6 offset-md-3" style="padding: 5px;">
+								<div class="input-group-prepend">
+									<img src="https://img.icons8.com/office/30/000000/administrator-male.png" style="padding:7px; margin-right: 5px;">
+									<input type="text" class="form-control" placeholder="Last name">
+								</div>
+							</div>
+
+							<div class="col-md-6 offset-md-3" style="padding: 5px;">
+								<div class="input-group-prepend">
+									<img src="https://img.icons8.com/ultraviolet/30/000000/new-post.png" style="padding:7px; margin-right: 5px;">
+									<input type="text" class="form-control" placeholder="Email">
+								</div>
+							</div>
+
+							<div class="col-md-6 offset-md-3" style="padding: 5px;">
+								<div class="input-group-prepend">
+									<img src="https://img.icons8.com/ultraviolet/30/000000/phone.png" style="padding: 7px; margin-right: 5px;">
+									<input type="text" class="form-control" placeholder="Phone">
+								</div>
+							</div>
+							<div class="col-md-6 offset-md-3" style="padding: 5px;">
+								<div class="input-group-prepend">
+									<img src="https://img.icons8.com/ultraviolet/40/000000/sms.png" style="padding: 2px;  margin-right: 5px; align-self: center;">
+									<textarea class="form-control" rows="4" placeholder="Enter your message here"></textarea>
+								</div>
+								<button type="submit" name="submit" class="btn btn-success" style="margin-left: 50%; margin-top: 25px; margin-bottom: 20px;">Submit</button>
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
-
-		<footer id="rodape" class="container-fluid">
-			<div class="row">
+		<div class="container">
+		<footer id="rodape" class="py-5 bg-success text-white">
+			<div class="row text-center">
+			<div class="col-md-6 ml-auto">
 				<p class="lead">Copyright Alyson Zancanaro&copy; 2018</p>
+				</div>
 			</div>
 		</footer>
+	</div>
 	</section>
-
-
+	
 	<script src="nodemodules/jquery/dist/jquery.js"></script>
 	<script src="nodemodules/popper.js/dist/umd/popper.js"></script>
 	<script src="nodemodules/bootstrap/dist/js/bootstrap.js"></script>
-
-
-
-
-
 	<script>
-		//Funcçoes para mudar informaçoes de contato // 	
-		$(document).ready(function() {
-
-			// define as variáveis que irão guardar o HTML original de cada div
-			var linkedin_txt, email_txt, whatsapp_txt;
-
-			$(".contato div.card div").on("mouseenter mouseleave", function(ev) {
-
-				var el = $(this); // elemento
-
-				// ev.type é o tipo de evento, que pode ser mouseenter ou mouseleave
-				if (ev.type == "mouseenter") {
-
-					var h = el.html(); // HTML do elemento
-
-					// salva o HTML original de cada div
-					if (el.hasClass("card-header")) linkedin_txt = h;
-					if (el.hasClass("card-body")) email_txt = h;
-					if (el.hasClass("card-footer")) whatsapp_txt = h;
-
-					// altera o HTML do elemento
-					el.html(el.data("link"));
-
-				} else {
-
-					if (el.hasClass("card-header")) var padrao = linkedin_txt;
-					if (el.hasClass("card-body")) var padrao = email_txt;
-					if (el.hasClass("card-footer")) var padrao = whatsapp_txt;
-
-					// restaura a div como era antes
-					el.html(padrao);
-				}
-			});
-		});
-
-
 		$(document).ready(function() {
 			$('#so').click(function() {
 				$('html, body').animate({
@@ -275,20 +267,18 @@ box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
 
 			$('#c').click(function() {
 				$('html, body').animate({
-					scrollTop: $('#cont').offset().top
+					scrollTop: $('#cont').offset().top - 80
 				}, 500);
 			});
 
 			$('#ini').click(function() {
 				$('html, body').animate({
 					scrollTop: $('#in').offset().top
-				}, 500);
+				}, 500); 
 			});
 
 		});
 
 	</script>
-
 </body>
-
 </html>
