--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<div class="h3 -font-weight-bold" style="font-family: 'Sree Krushnadevaraya', serif; font-size: 32px;">Informaçoes Basicas</div>
 							<div class="row">
 								<div class="col-sm-4"><strong class="text-uppercase">Idade:</strong></div>
-								<div class="col-sm-8">20</div>
+								<div class="col-sm-8">21</div>
 							</div>
 							<div class="row mt-3">
 								<div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -159,8 +159,8 @@
 
 	<!--PROJETOS  -->
 	<section id="p">
-		<div class="container" style="	-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);-moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);">
-			<div class="font-weight-bold" style="text-align: center; font-size: 35px; margin-bottom: 50px; text-align: center; padding-top: 25px;font-family: 'Sree Krushnadevaraya', serif;">Projetos</div>
+		<div class="container" style="-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);-moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);">
+			<div class="font-weight-bold" id="titulo">Projetos Arduino</div>
 			<div class="videos col-sm">
 				<div class="box">
 					<video controls style="max-height: 250px;">
@@ -181,9 +181,22 @@
 					<p><strong>Descriçao:</strong><br>Sistema de automaçao residencial neste projeto usei um assistente pessoal(Jarvis), esse assistente eu conectei via wifi no Esp8266(NodeMCU) Quando eu mando o jarvis ligar a lampada ele manda pro Node e o node aciona um rele que liga a lampada sem nenhuma conhexao com o pc.</p>
 				</div>
 			</div>
+		
+			<div class="row">
+			<div class="col-sm">
+				<div id="titulo">Sites</div>
+				<div class="text-center">
+				<img src="imgs/siteBootstrap.png" class="img-fluid" alt="Responsive image">
+				</div>
+				<h4 >Bootstrap 4</h4>
+				<a class="btn btn-success" target="_blank" href="https://alysonzr.github.io/SiteBootstrap/" role="button">Verifique o Site!</a>
+			</div>
+		</div>
 		</div>
 	</section>
-
+	<br>
+	<br>
+	<br>
 	<!--CONTATO  -->
 	<section id="cont">
 		<div class="container">
@@ -224,6 +237,7 @@
 									<textarea class="form-control" rows="4" placeholder="Enter your message here"></textarea>
 								</div>
 								<button type="submit" name="submit" class="btn btn-success" style="margin-left: 50%; margin-top: 25px; margin-bottom: 20px;">Submit</button>
+								
 							</div>
 						</div>
 					</form>
