--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
 	<title>Alyson Zancanaro Ramos</title>
 
+
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-success ">
 		<a class="navbar-brand" href="#" style="color: white;margin-left: 50px;">Portfólio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsite">
@@ -39,16 +40,18 @@
 	</nav>
 	<div class="container-fluid">
 		<div class="row">
+		<div class="col-xs-12">
 			<div id="in">
 				<div class="imagem ">
 					<div class="circle d-none d-lg-block d-xl-none;d-none d-xl-block">
 						<img src="imgs/ImagemPerfil.jpeg" class="d-none d-lg-block d-xl-none;d-none d-xl-block">
 					</div>
 					<img src="imgs/cc-bg-1.jpg" class="img-fluid" alt="Responsive image" style="display: flex; min-height: 350px;">
-					<div class="text d-none d-sm-block">Alyson Zancanaro Ramos</div>
+					<div class="text d-none d-lg-block d-xl-none;d-none d-xl-block">Alyson Zancanaro Ramos</div>
 					<p id="txtMuted" class=" d-none d-sm-block" >Desenvolvedor Front-End</p>
 				</div>
 			</div>
+		</div>
 		</div>
 
 		<div class="section" id="btn">
@@ -183,8 +186,9 @@
 						</video>
 						<div class="paragrafo">
 							<p> <strong>Descriçao:</strong><br><strong>Automatizando lampada com sensor de som</strong>, feito com um sensor de som(KY-038), um rele e um arduino, quando o sensor detecta duas batidas ele manda um codigo que aciona o rele e acende a lampada e vise-versa.</p>
-						</div>
-					</div>
+							</div>
+							</div>
+					
 				</div>
 				<br>
 				<br>
