--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">HTML</span>
 							<div class="progress " style="height: 15px;">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">60%</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">CSS</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">60%</div>
 							</div>
 						</div>
 					</div>
@@ -130,14 +130,14 @@
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">JavaScript</span>
 							<div class="progress " style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 55%;">55%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Java</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 65%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
 							</div>
 						</div>
 					</div>
@@ -146,14 +146,21 @@
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Bootstrap</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">60%</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6" style="height: 15px">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Wordpress</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6" style="height: 15px">
+						<div class="progress-container progress-primary"><span class="progress-badge text-success">Mysql</span>
+							<div class="progress" style="height: 15px">
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 40%;">40%</div>
 							</div>
 						</div>
 					</div>
