--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 				<a class="nav-item"><a class="nav-link smooth-scroll" id="ini" href="#in">Inicio</a></a>
 				<a class="nav-item"><a class="nav-link smooth-scroll" id="so" href="#sobre">Sobre</a></a>
 				<a class="nav-item"><a class="nav-link smooth-scroll" id="h" href="#habilidades">Habilidades</a></a>
-				<a class="nav-item"><a class="nav-link smooth-scroll" id="projeto" href="#p">Projetos</a></a>
 				<a class="nav-item"><a class="nav-link smooth-scroll" id="c" href="#cont">Contato</a></a>
 			</div>
 		</div>
@@ -75,7 +74,7 @@
 					<div class="col-lg-6 col-md-12">
 						<div class="card-body">
 							<div class="h3 -font-weight-bold " id="tituloSobre">Sobre</div>
-							<p>Ola! Meu nome é Alyson Zancanaro Ramos. Estou cursando ensino superior em Analise e Desenvolvimento de Sistemas em Gravatai na Faculdade e Escola Tecnica QI.</p>
+							<p>Ola! Meu nome é Alyson Zancanaro Ramos. Atualmenete formado em Analise e Desenvolvimento de Sistemas.</p>
 							<p>Sou amante de tecnologia e inovaçoes, adoro programaçao web. Gosto de codificar porque é a carreira mais incrível do mundo, Ja dizia o grande Steve Jobs "Todos neste país deveriam aprender a programar um computador, pois isto ensina a pensar."</p>
 						</div>
 					</div>
@@ -92,7 +91,7 @@
 							</div>
 							<div class="row mt-3">
 								<div class="col-sm-4"><strong class="text-uppercase">Telefone:</strong></div>
-								<div class="col-sm-8">51 997921418</div>
+								<div class="col-sm-8">(51) 997921418</div>
 							</div>
 							<div class="row mt-3">
 								<div class="col-sm-4"><strong class="text-uppercase">Endereço:</strong></div>
@@ -137,7 +136,7 @@
 					<div class="col-md-6">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Java</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">60%</div>
 							</div>
 						</div>
 					</div>
@@ -160,7 +159,7 @@
 					<div class="col-md-6" style="height: 15px">
 						<div class="progress-container progress-primary"><span class="progress-badge text-success">Mysql</span>
 							<div class="progress" style="height: 15px">
-								<div class="progress-bar progress-bar-striped bg-success" style="width: 40%;">40%</div>
+								<div class="progress-bar progress-bar-striped bg-success" style="width: 60%;">40%</div>
 							</div>
 						</div>
 					</div>
@@ -170,7 +169,7 @@
 	</div>
 
 	<!--PROJETOS  -->
-	<section id="p">
+<!-- 	<section id="p">
 		<div class="container">
 			<div class="bordaProjetos">
 				<div class="font-weight-bold" id="titulo">Projetos Arduino</div>
@@ -208,8 +207,8 @@
 							<p> <strong>Descriçao:</strong><br><strong>Sistema de automaçao residencial</strong> neste projeto usei um assistente pessoal(Jarvis), esse assistente eu conectei via wifi no Esp8266(NodeMCU) Quando eu mando o jarvis ligar a lampada ele manda pro Node e o node aciona um rele que liga a lampada sem nenhuma conexão com o pc, tudo via WIFI.</p>
 						</div>
 					</div>
-				</div>
-				<!--SITE-->
+				</div> -->
+			<!--SITE-->
 				<div class="container">
 					<div class="row">
 						<div class="col-sm">
