--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="col-lg-6 col-md-12">
 						<div class="card-body">
 							<div class="h3 -font-weight-bold " id="tituloSobre">Sobre</div>
-							<p>Ola! Meu nome é Alyson Zancanaro Ramos. Atualmenete formado em Analise e Desenvolvimento de Sistemas.</p>
+							<p>Ola! Meu nome é Alyson Zancanaro Ramos. Atualmente formado em Analise e Desenvolvimento de Sistemas.</p>
 							<p>Sou amante de tecnologia e inovaçoes, adoro programaçao web. Gosto de codificar porque é a carreira mais incrível do mundo, Ja dizia o grande Steve Jobs "Todos neste país deveriam aprender a programar um computador, pois isto ensina a pensar."</p>
 						</div>
 					</div>
